profilelist1exp/unpackaged/objects/CBOELTDashboard__c.object
<CustomObject>
    <description>This object is used to manage the links to the ELT reports and dashboards. It also includes links to leadership financial report documents</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Maintains the description of the Report or Dashboard or the Document</description>
        <inlineHelpText>Maintains the description of the Report or Dashboard or the Document</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdated__c</fullName>
        <description>Manually update this field to either &quot;Realtime&quot; or the date of the file upload</description>
        <inlineHelpText>Manually update this field to either &quot;Realtime&quot; or the date of the file upload</inlineHelpText>
        <label>LastUpdated</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this Checkbox is enabled, this record doesn&apos;t appear on the CBO ELT Dashboard landing page. This offers a way to keep the record enabled while still not showing up on the landing page</description>
        <inlineHelpText>When this Checkbox is enabled, this record doesn&apos;t appear on the CBO ELT Dashboard landing page</inlineHelpText>
        <label>Remove_Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportName__c</fullName>
        <description>Manages the name of the Report or Dashboard or Document name</description>
        <inlineHelpText>Manages the name of the Report or Dashboard or Document name</inlineHelpText>
        <label>ReportName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportType__c</fullName>
        <description>This will define the type of Report link record that is being created</description>
        <inlineHelpText>This will define the type of Report link record that is being created</inlineHelpText>
        <label>ReportType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MicroStrategy_WW_Daily_Financial_Report_GRC</fullName>
                </value>
                <value>
                    <fullName>Embedded_Weekly_Financial_Report_GRC</fullName>
                </value>
                <value>
                    <fullName>Embedded_Weekly_Financial_Report_Orders_Bookings</fullName>
                </value>
                <value>
                    <fullName>WW_SFDC_Pipeline_Dashboard_For_Steve_Felice</fullName>
                </value>
                <value>
                    <fullName>Bus_Division_SFDC_Pipeline_Dashboards</fullName>
                </value>
                <value>
                    <fullName>Financial_Pipeline_Page_Url</fullName>
                </value>
                <value>
                    <fullName>Sales Performance Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportURL__c</fullName>
        <description>This field maintains the URI to the Reports, Dashboards or Documents</description>
        <inlineHelpText>This field maintains the URI to the Reports, Dashboards or Documents</inlineHelpText>
        <label>ReportURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>Used to order the items in the dashboard links</description>
        <inlineHelpText>Used to order the items in the dashboard links</inlineHelpText>
        <label>SortOrder</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Explains the source of the report / dashboard. If it is a embedded file or to an external system or to SFDC Dashboard</description>
        <inlineHelpText>Explains the source of the report / dashboard. If it is a embedded file or to an external system or to SFDC Dashboard</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC Dashboard</fullName>
                </value>
                <value>
                    <fullName>Microstrategy</fullName>
                </value>
                <value>
                    <fullName>SFDC File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CBOELTDashboard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SortOrder__c</columns>
        <columns>NAME</columns>
        <columns>Remove_Visibility__c</columns>
        <columns>ReportName__c</columns>
        <columns>ReportType__c</columns>
        <columns>Source__c</columns>
        <columns>LastUpdated__c</columns>
        <columns>ReportURL__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bus_Division_SFDC_Pipeline_Dashboards</fullName>
        <columns>SortOrder__c</columns>
        <columns>NAME</columns>
        <columns>Remove_Visibility__c</columns>
        <columns>ReportName__c</columns>
        <columns>ReportType__c</columns>
        <columns>Source__c</columns>
        <columns>LastUpdated__c</columns>
        <columns>ReportURL__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReportType__c</field>
            <operation>equals</operation>
            <value>Bus_Division_SFDC_Pipeline_Dashboards</value>
        </filters>
        <label>Bus_Division_SFDC_Pipeline_Dashboards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Embedded_Weekly_Financial_Report_GRC</fullName>
        <columns>SortOrder__c</columns>
        <columns>NAME</columns>
        <columns>Remove_Visibility__c</columns>
        <columns>ReportName__c</columns>
        <columns>ReportType__c</columns>
        <columns>Source__c</columns>
        <columns>LastUpdated__c</columns>
        <columns>ReportURL__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReportType__c</field>
            <operation>equals</operation>
            <value>Embedded_Weekly_Financial_Report_GRC</value>
        </filters>
        <label>Embedded_Weekly_Financial_Report_GRC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Embedded_Weekly_Financial_Report_Orders</fullName>
        <columns>SortOrder__c</columns>
        <columns>NAME</columns>
        <columns>Remove_Visibility__c</columns>
        <columns>ReportName__c</columns>
        <columns>ReportType__c</columns>
        <columns>Source__c</columns>
        <columns>ReportURL__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReportType__c</field>
            <operation>equals</operation>
            <value>Embedded_Weekly_Financial_Report_Orders_Bookings</value>
        </filters>
        <label>Embedded_Weekly_Financial_Report_Orders_</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Financial_Pipeline_Page_Url</fullName>
        <columns>SortOrder__c</columns>
        <columns>NAME</columns>
        <columns>Remove_Visibility__c</columns>
        <columns>ReportName__c</columns>
        <columns>ReportType__c</columns>
        <columns>Source__c</columns>
        <columns>ReportURL__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReportType__c</field>
            <operation>equals</operation>
            <value>Financial_Pipeline_Page_Url</value>
        </filters>
        <label>Financial_Pipeline_Page_Url</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MicroStrategy_WW_Daily_Financial_Report</fullName>
        <columns>SortOrder__c</columns>
        <columns>NAME</columns>
        <columns>Remove_Visibility__c</columns>
        <columns>ReportName__c</columns>
        <columns>ReportType__c</columns>
        <columns>Source__c</columns>
        <columns>ReportURL__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReportType__c</field>
            <operation>equals</operation>
            <value>MicroStrategy_WW_Daily_Financial_Report_GRC</value>
        </filters>
        <label>MicroStrategy_WW_Daily_Financial_Report_</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sales_Performance_Reporting</fullName>
        <columns>SortOrder__c</columns>
        <columns>NAME</columns>
        <columns>Remove_Visibility__c</columns>
        <columns>ReportName__c</columns>
        <columns>ReportType__c</columns>
        <columns>Source__c</columns>
        <columns>ReportURL__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReportType__c</field>
            <operation>equals</operation>
            <value>Sales Performance Reporting</value>
        </filters>
        <label>Sales Performance Reporting</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WW_SFDC_Pipeline_Dashboard_For_Steve_Fel</fullName>
        <columns>SortOrder__c</columns>
        <columns>NAME</columns>
        <columns>Remove_Visibility__c</columns>
        <columns>ReportName__c</columns>
        <columns>ReportType__c</columns>
        <columns>Source__c</columns>
        <columns>ReportURL__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReportType__c</field>
            <operation>equals</operation>
            <value>WW_SFDC_Pipeline_Dashboard_For_Steve_Felice</value>
        </filters>
        <label>WW_SFDC_Pipeline_Dashboard_For_Steve_Fel</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ELT-{00000}</displayFormat>
        <label>CBOELTDashboard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBO ELT Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>